better handling when recursion limit reached